k8s/helm/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - api.pitch-game.io
    secretName: tls-secret
  rules:
  - host: api.pitch-game.io
    http:
      paths:
      - backend:
          serviceName: swagger-ui
          servicePort: 80
        path: /swagger-ui
      - backend:
          serviceName: gateway-api-gateway
          servicePort: 80
        path: /
